@@ -6164,8 +6164,13 @@ static FUNCTION(fun_iter)
     }
     bool first = true;
     int number = 0;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = number;
+    bool bLoopInBounds = (  0 <= mudstate.in_loop
+                         && mudstate.in_loop < MAX_ITEXT);
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = number;
+    }
     mudstate.in_loop++;
     while (  cp
           && mudstate.func_invk_ctr < mudconf.func_invk_lim
@@ -6178,8 +6183,11 @@ static FUNCTION(fun_iter)
         first = false;
         number++;
         char *objstring = split_token(&cp, &sep);
-        mudstate.itext[mudstate.in_loop-1] = objstring;
-        mudstate.inum[mudstate.in_loop-1]  = number;
+        if (bLoopInBounds)
+        {
+            mudstate.itext[mudstate.in_loop-1] = objstring;
+            mudstate.inum[mudstate.in_loop-1]  = number;
+        }
         char *buff2 = replace_tokens(fargs[1], objstring, mux_ltoa_t(number),
             NULL);
         str = buff2;
@@ -6188,8 +6196,11 @@ static FUNCTION(fun_iter)
         free_lbuf(buff2);
     }
     mudstate.in_loop--;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = 0;
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = 0;
+    }
     free_lbuf(curr);
 }
 
@@ -6268,8 +6279,13 @@ static FUNCTION(fun_list)
         return;
     }
     int number = 0;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = number;
+    bool bLoopInBounds = (  0 <= mudstate.in_loop
+                         && mudstate.in_loop < MAX_ITEXT);
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = number;
+    }
     mudstate.in_loop++;
     while (  cp
           && mudstate.func_invk_ctr < mudconf.func_invk_lim
@@ -6277,8 +6293,11 @@ static FUNCTION(fun_list)
     {
         number++;
         objstring = split_token(&cp, &sep);
-        mudstate.itext[mudstate.in_loop-1] = objstring;
-        mudstate.inum[mudstate.in_loop-1]  = number;
+        if (bLoopInBounds)
+        {
+            mudstate.itext[mudstate.in_loop-1] = objstring;
+            mudstate.inum[mudstate.in_loop-1]  = number;
+        }
         char *buff2 = replace_tokens(fargs[1], objstring, mux_ltoa_t(number),
             NULL);
         dp = result = alloc_lbuf("fun_list.2");
@@ -6291,8 +6310,11 @@ static FUNCTION(fun_list)
         free_lbuf(result);
     }
     mudstate.in_loop--;
-    mudstate.itext[mudstate.in_loop] = NULL;
-    mudstate.inum[mudstate.in_loop] = 0;
+    if (bLoopInBounds)
+    {
+        mudstate.itext[mudstate.in_loop] = NULL;
+        mudstate.inum[mudstate.in_loop] = 0;
+    }
     free_lbuf(curr);
 }
 
